# self-optimization

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_MANIFESTO.md  Makefile  NEWS.md  README.md  TEST_RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  marketing-eval.yml  self-eval.yml  self-heal.yml
marketing/: README.md  linkedin-article-marketing-eval.md  linkedin-article.md  social-posts-marketing-eval.md  social-posts.md
scripts/: install-watchdog.sh
src/: __main__.py  activity_scanner.py  anti_idling_system.py  config_loader.py  cost_governor.py  filesystem_scanner.py  gateway_watchdog.py  llm_provider.py  marketing_eval.py  multi_agent_performance.py  orchestrator.py  recursive_self_improvement.py  reflection_generator.py  results_verification.py  self_eval.py
tests/: conftest.py  test_anti_idling_system.py  test_anti_idling_unit.py  test_config_loader.py  test_contract_and_regression.py  test_cost_governor.py  test_edge_cases.py  test_filesystem_scanner.py  test_functional.py  test_gateway_watchdog.py  test_integration.py  test_llm_provider.py  test_marketing_eval.py  test_multi_agent_performance.py  test_orchestrator.py  test_recursive_self_improvement.py  test_results_verification.py  test_results_verification_unit.py  test_self_eval.py
